--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: UVNHaiBaTrung;
-  src: url('fonts/UVNHaiBaTrung.TTF');
+  src: url('/fonts/UVNHaiBaTrung.TTF');
 }
 
 .uvn-haibatrung-font {
@@ -181,7 +181,7 @@
 
 @font-face {
   font-family: Alexa;
-  src: url('fonts/Alexa.ttf');
+  src: url('/fonts/Alexa.ttf');
   font-weight: 300;
 }
 .Alexa {
@@ -189,7 +189,7 @@
 }
 @font-face {
   font-family: Clip;
-  src: url('fonts/Clip.ttf');
+  src: url('/fonts/Clip.ttf');
   font-weight: 300;
 }
 .Clip {
@@ -197,7 +197,7 @@
 }
 @font-face {
   font-family: Bellview;
-  src: url('fonts/Bellview.ttf');
+  src: url('/fonts/Bellview.ttf');
   font-weight: 300;
 }
 .Bellview {
@@ -205,7 +205,7 @@
 }
 @font-face {
   font-family: Chicago;
-  src: url('fonts/Chicago.ttf');
+  src: url('/fonts/Chicago.ttf');
   font-weight: 300;
 }
 .Chicago {
@@ -213,7 +213,7 @@
 }
 @font-face {
   font-family: Codystar-Regular;
-  src: url('fonts/Codystar-Regular.ttf');
+  src: url('/fonts/Codystar-Regular.ttf');
   font-weight: 300;
 }
 .Codystar-Regular {
@@ -221,7 +221,7 @@
 }
 @font-face {
   font-family: Cotton;
-  src: url('fonts/Cotton.ttf');
+  src: url('/fonts/Cotton.ttf');
   font-weight: 300;
 }
 .Cotton {
@@ -229,7 +229,7 @@
 }
 @font-face {
   font-family: Daisy;
-  src: url('fonts/Daisy.ttf');
+  src: url('/fonts/Daisy.ttf');
   font-weight: 300;
 }
 .Daisy {
@@ -237,7 +237,7 @@
 }
 @font-face {
   font-family: Garden;
-  src: url('fonts/Garden.ttf');
+  src: url('/fonts/Garden.ttf');
   font-weight: 300;
 }
 .Garden {
@@ -245,7 +245,7 @@
 }
 @font-face {
   font-family: Keith;
-  src: url('fonts/Keith.ttf');
+  src: url('/fonts/Keith.ttf');
   font-weight: 300;
 }
 .Keith {
@@ -253,7 +253,7 @@
 }
 @font-face {
   font-family: Springfield;
-  src: url('fonts/Springfield.ttf');
+  src: url('/fonts/Springfield.ttf');
   font-weight: 300;
 }
 .Springfield {
@@ -261,7 +261,7 @@
 }
 @font-face {
   font-family: LoveL;
-  src: url('fonts/LoveL.otf');
+  src: url('/fonts/LoveL.otf');
   font-weight: 300;
 }
 .LoveL {
@@ -269,7 +269,7 @@
 }
 @font-face {
   font-family: Photogenic;
-  src: url('fonts/Photogenic.ttf');
+  src: url('/fonts/Photogenic.ttf');
   font-weight: 300;
 }
 .Photogenic {
@@ -277,7 +277,7 @@
 }
 @font-face {
   font-family: Sacramento-Regular;
-  src: url('fonts/Sacramento-Regular.ttf');
+  src: url('/fonts/Sacramento-Regular.ttf');
   font-weight: 300;
 }
 .Sacramento-Regular {
@@ -285,7 +285,7 @@
 }
 @font-face {
   font-family: Selfie;
-  src: url('fonts/Selfie.ttf');
+  src: url('/fonts/Selfie.ttf');
   font-weight: 300;
 }
 .Selfie {
@@ -293,7 +293,7 @@
 }
 @font-face {
   font-family: soulja;
-  src: url('fonts/soulja.ttf');
+  src: url('/fonts/soulja.ttf');
   font-weight: 300;
 }
 .soulja {
@@ -301,7 +301,7 @@
 }
 @font-face {
   font-family: Venetian;
-  src: url('fonts/Venetian.ttf');
+  src: url('/fonts/Venetian.ttf');
   font-weight: 300;
 }
 .Venetian {
@@ -309,7 +309,7 @@
 }
 @font-face {
   font-family: Amanda;
-  src: url('fonts/Amanda.ttf');
+  src: url('/fonts/Amanda.ttf');
   font-weight: 300;
 }
 .Amanda {
@@ -317,7 +317,7 @@
 }
 @font-face {
   font-family: Amsterdam;
-  src: url('fonts/Amsterdam.ttf');
+  src: url('/fonts/Amsterdam.ttf');
   font-weight: 300;
 }
 .Amsterdam {
@@ -325,7 +325,7 @@
 }
 @font-face {
   font-family: Austin;
-  src: url('fonts/Austin.ttf');
+  src: url('/fonts/Austin.ttf');
   font-weight: 300;
 }
 .Austin {
@@ -333,7 +333,7 @@
 }
 @font-face {
   font-family: Avante;
-  src: url('fonts/Avante.ttf');
+  src: url('/fonts/Avante.ttf');
   font-weight: 300;
 }
 .Avante {
@@ -341,7 +341,7 @@
 }
 @font-face {
   font-family: Barcelona;
-  src: url('fonts/Barcelona.ttf');
+  src: url('/fonts/Barcelona.ttf');
   font-weight: 300;
 }
 .Barcelona {
@@ -349,7 +349,7 @@
 }
 @font-face {
   font-family: Bayview;
-  src: url('fonts/Bayview.ttf');
+  src: url('/fonts/Bayview.ttf');
   font-weight: 300;
 }
 .Bayview {
@@ -357,7 +357,7 @@
 }
 @font-face {
   font-family: Beachfront;
-  src: url('fonts/Beachfront.ttf');
+  src: url('/fonts/Beachfront.ttf');
   font-weight: 300;
 }
 .Beachfront {
@@ -365,7 +365,7 @@
 }
 @font-face {
   font-family: Buttercup;
-  src: url('fonts/Buttercup.ttf');
+  src: url('/fonts/Buttercup.ttf');
   font-weight: 300;
 }
 .Buttercup {
@@ -373,7 +373,7 @@
 }
 @font-face {
   font-family: Chelsea;
-  src: url('fonts/Chelsea.ttf');
+  src: url('/fonts/Chelsea.ttf');
   font-weight: 300;
 }
 .Chelsea {
@@ -381,7 +381,7 @@
 }
 @font-face {
   font-family: ClassicType;
-  src: url('fonts/ClassicType.ttf');
+  src: url('/fonts/ClassicType.ttf');
   font-weight: 300;
 }
 .ClassicType {
@@ -389,7 +389,7 @@
 }
 @font-face {
   font-family: Freehand;
-  src: url('fonts/Freehand.ttf');
+  src: url('/fonts/Freehand.ttf');
   font-weight: 300;
 }
 .Freehand {
@@ -397,7 +397,7 @@
 }
 @font-face {
   font-family: Freespirit;
-  src: url('fonts/Freespirit.ttf');
+  src: url('/fonts/Freespirit.ttf');
   font-weight: 300;
 }
 .Freespirit {
@@ -405,7 +405,7 @@
 }
 @font-face {
   font-family: Greenworld;
-  src: url('fonts/Greenworld.ttf');
+  src: url('/fonts/Greenworld.ttf');
   font-weight: 300;
 }
 .Greenworld {
@@ -413,7 +413,7 @@
 }
 @font-face {
   font-family: Hamillton;
-  src: url('fonts/Hamillton.ttf');
+  src: url('/fonts/Hamillton.ttf');
   font-weight: 300;
 }
 .Hamillton {
@@ -421,7 +421,7 @@
 }
 @font-face {
   font-family: LoveNeon;
-  src: url('fonts/LoveNeon.ttf');
+  src: url('/fonts/LoveNeon.ttf');
   font-weight: 300;
 }
 .LoveNeon {
@@ -429,7 +429,7 @@
 }
 @font-face {
   font-family: LoveNote;
-  src: url('fonts/LoveNote.ttf');
+  src: url('/fonts/LoveNote.ttf');
   font-weight: 300;
 }
 .LoveNote {
@@ -437,7 +437,7 @@
 }
 @font-face {
   font-family: Marquee;
-  src: url('fonts/Marquee.ttf');
+  src: url('/fonts/Marquee.ttf');
   font-weight: 300;
 }
 .Marquee {
@@ -445,7 +445,7 @@
 }
 @font-face {
   font-family: Mayfair;
-  src: url('fonts/Mayfair.ttf');
+  src: url('/fonts/Mayfair.ttf');
   font-weight: 300;
 }
 .Mayfair {
@@ -453,7 +453,7 @@
 }
 @font-face {
   font-family: Melbourne;
-  src: url('fonts/Melbourne.ttf');
+  src: url('/fonts/Melbourne.ttf');
   font-weight: 300;
 }
 .Melbourne {
@@ -461,7 +461,7 @@
 }
 @font-face {
   font-family: Monaco;
-  src: url('fonts/Monaco.ttf');
+  src: url('/fonts/Monaco.ttf');
   font-weight: 300;
 }
 .Monaco {
@@ -469,7 +469,7 @@
 }
 @font-face {
   font-family: NeonGlow;
-  src: url('fonts/NeonGlow.ttf');
+  src: url('/fonts/NeonGlow.ttf');
   font-weight: 300;
 }
 .NeonGlow {
@@ -477,7 +477,7 @@
 }
 @font-face {
   font-family: NeonLite;
-  src: url('fonts/NeonLite.ttf');
+  src: url('/fonts/NeonLite.ttf');
   font-weight: 300;
 }
 .NeonLite {
@@ -485,7 +485,7 @@
 }
 @font-face {
   font-family: Neonscript;
-  src: url('fonts/Neonscript.ttf');
+  src: url('/fonts/Neonscript.ttf');
   font-weight: 300;
 }
 .Neonscript {
@@ -493,7 +493,7 @@
 }
 @font-face {
   font-family: Neontrace;
-  src: url('fonts/Neontrace.ttf');
+  src: url('/fonts/Neontrace.ttf');
   font-weight: 300;
 }
 .Neontrace {
@@ -501,7 +501,7 @@
 }
 @font-face {
   font-family: NeoTokyo;
-  src: url('fonts/NeoTokyo.ttf');
+  src: url('/fonts/NeoTokyo.ttf');
   font-weight: 300;
 }
 .NeoTokyo {
@@ -509,7 +509,7 @@
 }
 @font-face {
   font-family: Nevada;
-  src: url('fonts/Nevada.ttf');
+  src: url('/fonts/Nevada.ttf');
   font-weight: 300;
 }
 .Nevada {
@@ -517,7 +517,7 @@
 }
 @font-face {
   font-family: NewCursive;
-  src: url('fonts/NewCursive.ttf');
+  src: url('/fonts/NewCursive.ttf');
   font-weight: 300;
 }
 .NewCursive {
@@ -525,7 +525,7 @@
 }
 @font-face {
   font-family: Northshore;
-  src: url('fonts/Northshore.ttf');
+  src: url('/fonts/Northshore.ttf');
   font-weight: 300;
 }
 .Northshore {
@@ -533,7 +533,7 @@
 }
 @font-face {
   font-family: Rocket;
-  src: url('fonts/Rocket.ttf');
+  src: url('/fonts/Rocket.ttf');
   font-weight: 300;
 }
 .Rocket {
@@ -541,7 +541,7 @@
 }
 @font-face {
   font-family: Royalty;
-  src: url('fonts/Royalty.ttf');
+  src: url('/fonts/Royalty.ttf');
   font-weight: 300;
 }
 .Royalty {
@@ -549,7 +549,7 @@
 }
 @font-face {
   font-family: SciFi;
-  src: url('fonts/SciFi.ttf');
+  src: url('/fonts/SciFi.ttf');
   font-weight: 300;
 }
 .SciFi {
@@ -557,7 +557,7 @@
 }
 @font-face {
   font-family: Signature;
-  src: url('fonts/Signature.ttf');
+  src: url('/fonts/Signature.ttf');
   font-weight: 300;
 }
 .Signature {
@@ -565,7 +565,7 @@
 }
 @font-face {
   font-family: Typewriter;
-  src: url('fonts/Typewriter.ttf');
+  src: url('/fonts/Typewriter.ttf');
   font-weight: 300;
 }
 .Typewriter {
@@ -573,7 +573,7 @@
 }
 @font-face {
   font-family: Vintage;
-  src: url('fonts/Vintage.ttf');
+  src: url('/fonts/Vintage.ttf');
   font-weight: 300;
 }
 .Vintage {
@@ -581,7 +581,7 @@
 }
 @font-face {
   font-family: Waikiki;
-  src: url('fonts/Waikiki.ttf');
+  src: url('/fonts/Waikiki.ttf');
   font-weight: 300;
 }
 .Waikiki {
@@ -589,7 +589,7 @@
 }
 @font-face {
   font-family: WildScript;
-  src: url('fonts/WildScript.ttf');
+  src: url('/fonts/WildScript.ttf');
   font-weight: 300;
 }
 .WildScript {
@@ -597,7 +597,7 @@
 }
 @font-face {
   font-family: Orleans;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/Orleans.ttf');
+  src: url('/fonts/Orleans.ttf');
   font-weight: 300;
 }
 .Orleans {
@@ -605,7 +605,7 @@
 }
 @font-face {
   font-family: BloomingElegant1;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/BloomingElegant1.otf');
+  src: url('/fonts/BloomingElegant1.otf');
   font-weight: 300;
 }
 .BloomingElegant1 {
@@ -613,7 +613,7 @@
 }
 @font-face {
   font-family: MJ-Sunderlines;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/MJ-Sunderlines.ttf');
+  src: url('/fonts/MJ-Sunderlines.ttf');
   font-weight: 300;
 }
 .MJ-Sunderlines {
@@ -621,7 +621,7 @@
 }
 @font-face {
   font-family: MJ-Whitegone-Regular;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/MJ-Whitegone-Regular.ttf');
+  src: url('/fonts/MJ-Whitegone-Regular.ttf');
   font-weight: 300;
 }
 .MJ-Whitegone-Regular {
@@ -629,7 +629,7 @@
 }
 @font-face {
   font-family: MTD-Himalaya;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/MTD-Himalaya.otf');
+  src: url('/fonts/MTD-Himalaya.otf');
   font-weight: 300;
 }
 .MTD-Himalaya {
@@ -637,7 +637,7 @@
 }
 @font-face {
   font-family: MTD-Houstoner-Script;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/MTD-Houstoner-Script.otf');
+  src: url('/fonts/MTD-Houstoner-Script.otf');
   font-weight: 300;
 }
 .MTD-Houstoner-Script {
@@ -645,7 +645,7 @@
 }
 @font-face {
   font-family: MTD-Lazy-Ride-Script;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/MTD-Lazy-Ride-Script.otf');
+  src: url('/fonts/MTD-Lazy-Ride-Script.otf');
   font-weight: 300;
 }
 .MTD-Lazy-Ride-Script {
@@ -653,7 +653,7 @@
 }
 @font-face {
   font-family: Hipsteria;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/Hipsteria.ttf');
+  src: url('/fonts/Hipsteria.ttf');
   font-weight: 300;
 }
 .Hipsteria {
@@ -661,7 +661,7 @@
 }
 @font-face {
   font-family: OneDay;
-  src: url('https://cdn.jsdelivr.net/gh/designeroren/fonttiengvietneon/OneDay.otf');
+  src: url('/fonts/OneDay.otf');
   font-weight: 300;
 }
 .OneDay {
